umlaut North America Careers - Front-End Web Developer. Senior Frontend Developer (Angular) - Diversitas Team - Holycode - Career Page. Optimizely Lead Front End Developer, On-Demand Services | SmartRecruiters. Job Application for Senior Front-end Engineer at SoundHound Inc.. Job Application for Senior Front-end Engineer at SoundHound Inc.. Job @ JKweb (Zürich): Web Entwickler Frontend 60 -... | JOIN. Front End Engineer - IntelliPro Group Inc. - Career Page. Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page.     Front End Developer at Scripbox Advisors Private Limited . umlaut North America Careers - Front-End Web Developer. Internet Brands Careers - Front End Developer. Miratech Front-End Developer | SmartRecruiters. Square Senior Software Engineer (Front-End/Full Stack), Customers Team | SmartRecruiters. Job Application for Analysis Tools Frontend Engineer at Graphcore. ServiceNow Careers - Staff Quality Engineer, Front-end. Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN. Job @ JOIN Solutions (Berlin): Senior Frontend Eng... | JOIN. Web Designer - Front End - ZigZag Careers - Career Page. Bey Front End Developer | SmartRecruiters. Q4 - Intermediate Front End Developer. HelloOffice - Front End Engineer. Job @ Metals Hub (Düsseldorf): Frontend Developer ... | JOIN. Copper CRM - Front End Engineer. N3TWORK Careers - Front End Web Engineer. DNEG Careers - Front End Developer. Job @ maxcluster (Paderborn): UI/UX Frontend Desig... | JOIN. Senior Front End Developer - Zonal Retail Data Systems Limited - Career Page. Palo Alto Networks Careers - Intern - Frontend Management Software Development Engineer. Front-end Web Developer | WorkNOLA. Front-end developer | WorkNOLA. Tipico Senior Front-End Developer (m/f/x) | SmartRecruiters. Frontend Engineer - MyMusicTaste - Career Page. ??????(???) Frontend Engineer - MyMusicTaste - Career Page.       (Ref. 646/2019) Frontend Developer - Syone     . Job @ LIQID Investments (Berlin): Senior Frontend

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/umlaut/job/oukrbfwa'>umlaut North America Careers - Front-End Web Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='http://holycodedoo.applytojob.com/apply/b9Lku46zvp/Senior-Frontend-Developer-Angular-Diversitas-Team'>Senior Frontend Developer (Angular) - Diversitas Team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
@@ -104,7 +108,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/Gbfk7PS5LF/Web-Designer-Front-End'>Web Designer - Front End - ZigZag Careers - Career Page</a></h5> 
+<h5><a href='http://zigzag.applytojob.com/apply/Gbfk7PS5LF/Web-Designer-Front-End'>Web Designer - Front End - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -120,11 +124,11 @@
 <p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://metalshub.join.com/jobs/466379-frontend-developer-m-f-d'>Job @ Metals Hub (D?sseldorf): Frontend Developer ... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://metalshub.join.com/jobs/466379-frontend-developer-m-f-d'>Job @ Metals Hub (D?sseldorf): Frontend Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/copper/d3aabfb0-fa16-428d-a994-fa8965978809'>Copper CRM - Front End Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/copper/d3aabfb0-fa16-428d-a994-fa8965978809'>Copper CRM - Front End Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -178,7 +182,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/o8Tqbfwm'>TeamViewer Global Careers - Senior Frontend Developer (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/o8Tqbfwm'>TeamViewer Global Careers - Senior Frontend Developer (m/f/d)</a></h5> 
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -264,7 +268,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241490-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241490-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -320,7 +324,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4463118002'>Job Application for Frontend Engineer - Warsaw at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4463118002'>Job Application for Frontend Engineer - Warsaw at Glovo</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw  Warsaw, Poland  Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -332,7 +336,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489133002'>Job Application for Frontend Engineer - Customer Solutions at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489133002'>Job Application for Frontend Engineer - Customer Solutions at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -414,7 +418,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oBdQafwy&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nX6mlMw1'>ServiceNow Careers - Staff Front End Software Engineer, Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oBdQafwy&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nX6mlMw1'>ServiceNow Careers - Staff Front End Software Engineer, Platform</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -452,10 +456,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4474088002'>Job Application for Front-end Software Engineer - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light">France Canada</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/3dhubs/fd1a588b-a0de-4f29-a903-a28cfb98fe29'>3D Hubs - FrontEnd Engineer [Angular / NGRX]</a></h5> 
-<p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
