--- a/project-manager.html
+++ b/project-manager.html
@@ -40,15 +40,27 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/braviumconsulting/job/oG0rbfw2'>Bravium Consulting Careers - Data Integrity Project Manager</a></h5> 
+<h5><a href='http://stellarinnovations.applytojob.com/apply/5iRCxooPcK/IT-Project-Manager'>IT Project Manager - Stellar Innovations - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
+<h5><a href='https://jobs.lever.co/kivaconfections/71ed8764-e35e-4a25-994c-c675e773d2a1'>Kiva Confections - External Partners Program Manager</a></h5> 
+<p><span class="badge badge-light">California California</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/jonesgroveitrecruiting/job/5yueikyb14r3as866rkd3muq7y'>Project Manager | Jones Grove IT Recruiting</a></h5> 
+<p><span class="badge badge-light">Charlotte, NC  Charlotte, NC</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/braviumconsulting/job/oG0rbfw2'>Bravium Consulting Careers - Data Integrity Project Manager</a></h5> 
+<p><span class="badge badge-light">San Antonio, Texas</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco, California  Santa Clara, California  San Francisco Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/oJSlbfwR'>Blizzard Entertainment Careers - Program Manager Intern</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/oJSlbfwR'>Blizzard Entertainment Careers - Program Manager Intern</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -118,7 +130,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698340729-electrical-vehicle-project-manager-ps'>Bosch Group Electrical Vehicle Project Manager/?????????_PS | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698340729-electrical-vehicle-project-manager-ps'>Bosch Group Electrical Vehicle Project Manager/?????????_PS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -130,7 +142,7 @@
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/oliver/jobs/1935462'>Job Application for Project Manager (HRIS Implementation of Sage People) at OLIVER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/oliver/jobs/1935462'>Job Application for Project Manager (HRIS Implementation of Sage People) at OLIVER</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -138,11 +150,11 @@
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bswhealth.referrals.selectminds.com/jobs/project-manager-iii-temple-36932'>Project Manager III Temple - Baylor Scott & White Health Careers</a></h5> 
+<h5><a href='https://bswhealth.referrals.selectminds.com/jobs/project-manager-iii-temple-36932'>Project Manager III Temple - Baylor Scott & White Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -182,7 +194,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relex.recruiterbox.com/jobs/fk03ilj/'>
     Project Manager at RELEX
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -216,7 +228,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tally/jobs/4498288002'>Job Application for Sr. Technical Program Manager at Tally</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tally/jobs/4498288002'>Job Application for Sr. Technical Program Manager at Tally</a></h5> 
 <p><span class="badge badge-light">San Francisco Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -282,7 +294,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">Budapest, Hungary  Los Angeles Brazil</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://archinect.com/jobs/entry/150167076/project-manager'>Project Manager - Brooklyn, NY, US | Jobs | Archinect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://archinect.com/jobs/entry/150167076/project-manager'>Project Manager - Brooklyn, NY, US | Jobs | Archinect</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NYBrooklyn, NY</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -350,7 +362,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">New York City San Francisco Seattle</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rvm/jobs/1933238'>Job Application for eDiscovery Project Manager (REMOTE -NATIONWIDE) at RVM</a></h5> 
+<h5><a href='https://boards.greenhouse.io/rvm/jobs/1933238'>Job Application for eDiscovery Project Manager (REMOTE -NATIONWIDE) at RVM</a></h5> 
 <p><span class="badge badge-light">New York City San Francisco Seattle</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -360,7 +372,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/owgpbfw6'>Blizzard Entertainment Careers - Senior Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/blizzard/job/owgpbfw6'>Blizzard Entertainment Careers - Senior Program Manager</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -376,7 +388,7 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/kerauno/jobs/4495654002'>Job Application for Senior Implementation Project Manager at Kerauno</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/kerauno/jobs/4495654002'>Job Application for Senior Implementation Project Manager at Kerauno</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -430,7 +442,7 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
+<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -438,20 +450,8 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/praktikum/e584476'>Stellenangebot: Senior Project Manager (m/w/d) ? Event Marketing (K?ln) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/indigo/jobs/1931884'>Job Application for Project Manager, DevOps at Indigo</a></h5> 
-<p><span class="badge badge-light">Boston</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/pointclickcare/c5cccd92-2ffa-4ae9-a2c1-31561102a2c9'>PointClickCare - Project Manager</a></h5> 
-<p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
