--- a/full-stack.html
+++ b/full-stack.html
@@ -122,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
+<h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -243,7 +243,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
       D?veloppeur Full-Stack H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -269,7 +269,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
+<h5><a href='https://linx.recruiterbox.com/jobs/fk03i2j/'>
     Desenvolvedor Full Stack SR at Linx
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -327,7 +327,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://bx-cert.ru/job/full-stack-developer-bitrix-php-javascript-jquery-cms-66233/'>? ?????????? ????????? Full - stack - developer (Bitrix, PHP, JavaScript, jQuery, CMS), ???????? ?? 40000 ?? 80000 ??????</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bx-cert.ru/job/full-stack-developer-bitrix-php-javascript-jquery-cms-66233/'>? ?????????? ????????? Full - stack - developer (Bitrix, PHP, JavaScript, jQuery, CMS), ???????? ?? 40000 ?? 80000 ??????</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -371,7 +371,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Lisbon Lisbon, Portugal  Zurich, Switzerland Lisbon, Portugal Lisbon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/companycam-looking-for-full-stack-software-engineer/'>CompanyCam looking for Full Stack Software Engineer</a></h5> 
+<h5><a href='https://dedeleads.com/job/companycam-looking-for-full-stack-software-engineer/'>CompanyCam looking for Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -383,7 +383,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='http://farmersfridge.applytojob.com/apply/A3BwgOUDJn/Sr-Full-Stack-Engineer'>Sr. Full Stack Engineer - Farmer's Fridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://farmersfridge.applytojob.com/apply/A3BwgOUDJn/Sr-Full-Stack-Engineer'>Sr. Full Stack Engineer - Farmer's Fridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -465,7 +465,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://slingshotaerospace.applytojob.com/apply/j8jgd6lSYE/Senior-Full-Stack-And-Mobile-Software-Engineer'>Senior Full Stack and Mobile Software Engineer - Slingshot Aerospace - Career Page</a></h5> 
+<h5><a href='http://slingshotaerospace.applytojob.com/apply/j8jgd6lSYE/Senior-Full-Stack-And-Mobile-Software-Engineer'>Senior Full Stack and Mobile Software Engineer - Slingshot Aerospace - Career Page</a></h5> 
 <p><span class="badge badge-light">El Segundo, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
