Quadient Careers - Ingénieur Système DevOps. J2 Global Careers - DevOPs Systems Administrator. Job @ SO1 (Remote): Junior DevOps Engineer (m/f/x)... | JOIN. Internet Brands Careers - DevOps Engineer - Avvo. Miratech Senior DevOps Engineer | SmartRecruiters. Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA. Rewards Network - DevOps and Cloud Engineer. Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA. Bey DevOps Engineer & Unix Administrator | SmartRecruiters. TitanData Inc. Sr. DevOps Engineer | SmartRecruiters. Broadridge Senior DevOps Engineer (Contract) | SmartRecruiters. Job Application for Senior Software Engineer (with DevOps experience) at Punchh. Job Application for DevOps Engineer at Careem. Palo Alto Networks Careers - DevOps SRE Engineer (Information Security). Palo Alto Networks Careers - DevOps SRE Engineer (Information Security). Job @ TwinCap (Zug): IT DevOps IoT / Ref. 106146 | JOIN. ??????(???) DevOps Engineer - MyMusicTaste - Career Page. Playtech Systems Administrator / DevOps | SmartRecruiters. Stellenangebot: Systemadministrator Linux mit Schwerpunkt DevOps (m/w/d) (Erlangen) – dasauge® Stellenmarkt. Job @ Tensor Technologies (Zug): DevOps Engineer | JOIN.     Engineering Manager - DevOps at Srijan Technologies Pvt Ltd .     DevOps Analyst SR at EBANX . NICE Careers - DevOps Engineer - NICE Actimize. Job Application for Project Manager, DevOps at Indigo. Job Application for Senior Engineering Manager, DevOps at Indigo. Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote). Guidewire Software, Inc. Careers - Cloud DevOps. NICE Actimize Careers - Specialist DevOps Engineer. Linkbynet Administrateur Devops H/F | SmartRecruiters. MORI Associates, Inc. Careers - DevOps Systems Administrator - programming/automation - NASA/JPL. InStride - DevOps. Netcentric System Engineer - DevOps | SmartRecruiters. Netcentric System Engineer (DevOps) | SmartRecruiters. Netcentric Se

--- a/devops.html
+++ b/devops.html
@@ -58,7 +58,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/guidewire-software/job/odUpbfwr'>Guidewire Software, Inc. Careers - Director of DevOps,  Risk Analytics - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://tensor-tech.join.com/jobs/460117-devops-engineer'>Job @ Tensor Technologies (Zug): DevOps Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tensor-tech.join.com/jobs/460117-devops-engineer'>Job @ Tensor Technologies (Zug): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Zug, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -271,7 +271,7 @@ of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/blinkist/fd55f58b-c861-4184-8638-4897c254aabe'>Blinkist - Senior DevOps / Systems Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/blinkist/fd55f58b-c861-4184-8638-4897c254aabe'>Blinkist - Senior DevOps / Systems Engineer</a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -303,7 +303,7 @@ of?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proposify.applytojob.com/apply/CezF4wWP60/DevOps-Engineer'>DevOps Engineer - Proposify - Career Page</a></h5> 
+<h5><a href='http://proposify.applytojob.com/apply/CezF4wWP60/DevOps-Engineer'>DevOps Engineer - Proposify - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -341,7 +341,7 @@ of?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=oyu3afwZ&__jvst=Referral&__jvsd=s2iKPhwF&__jvsc=Twitter&bid=nbsglMwv'>Rackspace Careers - Monitoring DevOps III-2</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qdFaVfwH&k=Job&j=oyu3afwZ&__jvst=Referral&__jvsd=s2iKPhwF&__jvsc=Twitter&bid=nbsglMwv'>Rackspace Careers - Monitoring DevOps III-2</a></h5> 
 <p><span class="badge badge-light">Gurgaon, India</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -369,7 +369,7 @@ of?...</p>
 <p><span class="badge badge-light">Milpitas</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://raisin.join.com/jobs/457807-devops-site-reliability-engineer-m-f-d'>Job @ Raisin (Berlin): DevOps/Site Reliability Eng... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -397,7 +397,7 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698128642-devops-ingenieur-in-cloud-services'>Bosch Group DevOps Ingenieur*in Cloud Services | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698128642-devops-ingenieur-in-cloud-services'>Bosch Group DevOps Ingenieur*in Cloud Services | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -413,7 +413,7 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Apply to DevOps Engineer at Formstack in Krakow, Poland.</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/stridehealth/a36d78ea-51dd-4808-8d8e-7b674f13238b'>Stride Health - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/stridehealth/a36d78ea-51dd-4808-8d8e-7b674f13238b'>Stride Health - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -429,7 +429,7 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://synedat.join.com/jobs/457673-devops-engineer-m-w-d'>Job @ Synedat Consulting (Helmstedt): DevOps Engin... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://synedat.join.com/jobs/457673-devops-engineer-m-w-d'>Job @ Synedat Consulting (Helmstedt): DevOps Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -446,11 +446,11 @@ strive for the best build and deploy experience that we can offer our developer?
 <p><span class="badge badge-light">San Mateo, California</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amount/e0b6007d-ab4c-4ece-98a5-e04859f8d359'>Amount - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amount/e0b6007d-ab4c-4ece-98a5-e04859f8d359'>Amount - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/amount/e5dc3d57-3af5-47dd-81a9-cdbae4f0c588'>Amount - Software Engineer, DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/amount/e5dc3d57-3af5-47dd-81a9-cdbae4f0c588'>Amount - Software Engineer, DevOps</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
