Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters. umlaut North America Careers - Front-End Web Developer. Silver Peak Systems Careers - Senior Web Application Developer.       PHP Web Developer (f/m/d), for Rechhero - Applift     . umlaut North America Careers - Front-End Web Developer. Compuware Careers - Entry-level Web Developer. Visa Software Engineer, Web Applications (REF20023I) - Visa Digital Developer Platform (VDDP) | SmartRecruiters. Obsidian Digital Web Developer | SmartRecruiters. ProObject, Inc. |   PRIME Web Developer Level 1 (SharePoint, JavaScript, HTML, CSS). Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives. Trainee Web Developer job with TALENT SPA | Guardian Jobs. Silver Peak Systems Careers - Senior Web Application Developer. Front-end Web Developer | WorkNOLA.       (Ref. 682/2019) - Python Developers and Web Developers - Syone     . FOCUS Point Web Resource Development Officer (Part-Time, 0.8 FTE) (256374) | Education / Teaching Jobs | s1jobs. coolblueweb looking for Remote WordPress Developer. World Travel Holdings looking for Junior Web Applications Developer. coolblueweb looking for US Based Remote - Laravel/PHP/WordPress Developer. Scaled Agile Careers - Web Application Developer. Silver Peak Systems Careers - Senior Web Application Developer. Job @ interactive tools   (Berlin): Web Developer ... | JOIN. Job Application for Web Developer (Contract)  at AspireIQ. Full Stack Web Developer - Near Earth Autonomy - Career Page. MORI Associates, Inc. Careers - Web Applications Developer - Linux/Unix - TS SCI clearance required - NASA/JPL. Job @ ongoing (Zug): Web-Developer (Frontend / UI ... | JOIN.       Lead Web Performance Developer (m|f|x) - idealo internet GmbH     . Full Stack Web Developers - Pandell. Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives. Job @ Apiax (Lisbon

--- a/web-developer.html
+++ b/web-developer.html
@@ -76,7 +76,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://artisantalent.com/jobs/chicago/ux-architect/46134?utm_content=104251457&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
+<h5><a href='https://artisantalent.com/jobs/chicago/ux-architect/46134?utm_content=104251457&utm_medium=social&utm_source=twitter&hss_channel=tw-159227192'>Creative, Digital, Visual, and Marketing Jobs | Find Jobs Here | Web Developers, Programmers, Digital Account Executives</a></h5> 
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -114,7 +114,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/scaledagile/job/okfpbfwT'>Scaled Agile Careers - Web Application Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/scaledagile/job/okfpbfwT'>Scaled Agile Careers - Web Application Developer</a></h5> 
 <p><span class="badge badge-light">Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -130,7 +130,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
+<h5><a href='http://nearearthautonomy.applytojob.com/apply/iH2ySRbAXO/Full-Stack-Web-Developer'>Full Stack Web Developer - Near Earth Autonomy - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -168,7 +168,7 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ALRiyad/743999698225244-web-developer'>ALRiyad Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -297,7 +297,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/24562-Senior-Web-Developer?source=twitter'>
       Senior Web Developer at Persado - San Franciso, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -395,7 +395,7 @@ finding and telling compelling stories about health, medicine, and scientific?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.chenegamios.com/columbia-md/front-end-web-developer/11050BC8CF6448308A332C1FAC0A4666/job/'>
+<h5><a href='https://careers.chenegamios.com/columbia-md/front-end-web-developer/11050BC8CF6448308A332C1FAC0A4666/job/'>
 Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United States
 </a></h5> 
 <p><span class="badge badge-light">United States  Columbia, Maryland</span></p>
@@ -453,7 +453,7 @@ Chenega Corporation Jobs - Front End Web Developer in Columbia, Maryland, United
 <p><span class="badge badge-light">Cincinnati, OH  Chicago, IL  Denver, CO  Indianapolis, IN  Los Angeles, CA  New York, NY  San Francisco, CA  Washington, DC</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hylinkgroup/0be5e84c-8e4e-40f9-9801-0348d32712a7'>Hylink Digital Solutions - Back-End Web Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/hylinkgroup/0be5e84c-8e4e-40f9-9801-0348d32712a7'>Hylink Digital Solutions - Back-End Web Developer</a></h5> 
 <p><span class="badge badge-light">Los Angeles  Los Angeles</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
